2007-08-12  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/baseweb.py (OneLinePerBuild): refactor using
	generateFinishedBuilds, and improve the data displayed.
	* buildbot/status/web/build.py (StatusResourceBuild): rearrange
	the per-Build page, add some information like ETA and got_revision
	* buildbot/status/web/builder.py (StatusResourceBuilder): same,
	adding a list of recently completed builds
	* buildbot/status/web/base.py (css_classes): factor this out

	* buildbot/interfaces.py (IStatus.generateFinishedBuilds): define
	new method, to make status display classes easier to write,
	especially the WebStatus 'one_line_per_build' page.
	(IBuilderStatus.generateFinishedBuilds): same
	* buildbot/status/builder.py (BuilderStatus.generateFinishedBuilds):
	(Status.generateFinishedBuilds): implement it

	* buildbot/process/factory.py (GNUAutoconf.__init__): allow
	'source' to be a BuildStep instance, since BuildFactory accepts
	them now.
	(CPAN.__init__): same
	(Distutils.__init__): same
	(Trial.__init__): same

	* buildbot/interfaces.py (IBuildStatus.getProperty): note that
	this might raise KeyError

2007-08-07  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (P4): use 'p4user' to construct the
	'Owner:' field of the view, rather than 'p4logname', since
	p4logname comes from the buildslave's environment and seems
	unlikely to ever do the right thing. Thanks to Wade Brainerd for
	the patch. Closes #40.

	* buildbot/buildslave.py (BuildSlave.__init__): add max_builds=,
	which imposes a per-slave limit on how many builds are allowed to
	run simultaneously. This has a the same scope than the SlaveLock,
	but is different because max_builds= gives the buildmaster the
	freedom to assign the build to a different slave, whereas the
	SlaveLock doesn't get tested until after the build is irrevocably
	assigned to a slave. Therefore using max_builds= will improve
	utilization in the presence of multiple buildslaves that are